--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,6 +3,18 @@ FROM dockerfile/nodejs
 RUN useradd -m -s /bin/bash developer
 
 RUN apt-get update && apt-get install -y mc
+RUN apt-get install git-flow
 
 RUN npm install -g gulp webpack webpack-dev-server
 RUN npm install -g rx
+
+RUN export uid=1000 gid=1000 && \
+    mkdir -p /home/developer && \
+    echo "developer:x:${uid}:${gid}:Developer,,,:/home/developer:/bin/bash" >> /etc/passwd && \
+    echo "developer:x:${uid}:" >> /etc/group && \
+    echo "developer ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/developer && \
+    chmod 0440 /etc/sudoers.d/developer && \
+    chown ${uid}:${gid} -R /home/developer
+
+USER developer
+ENV HOME /home/developer
