--- a/docker/backend-java/Dockerfile.oracle-java7
+++ b/docker/backend-java/Dockerfile.oracle-java7
@@ -1,4 +1,4 @@
-FROM dockerfile/java:oracle-java8
+FROM dockerfile/java:oracle-java7
 
 RUN useradd -m -s /bin/bash developer
 
@@ -30,6 +30,7 @@ RUN mv /home/developer/.m2 /home/developer/.m2.tmpl
 RUN echo ". /home/developer/.alias" >> /home/developer/.bashrc
 
 ADD init.sh /home/developer/
+ADD m2_copy.sh /docker-entrypoint-initdb.d/
 
-CMD ["sudo", "/home/developer/init.sh"]
+CMD ["sudo", "/home/developer/entrypoint.sh"]
 
