--- a/docker/backend-scala/Dockerfile
+++ b/docker/backend-scala/Dockerfile
@@ -37,7 +37,7 @@ RUN /home/developer/bin/cs n8han/giter8
 
 RUN mv /home/developer/.ivy2 /home/developer/.ivy2.tmpl
 
-ADD init.sh /home/developer/
+ADD entrypoint.sh /home/developer/
 
-CMD ["sudo", "/home/developer/init.sh"]
+CMD ["sudo", "/home/developer/entrypoint.sh"]
 
