--- a/docker/backend-java/Dockerfile.oracle-java7
+++ b/docker/backend-java/Dockerfile.oracle-java7
@@ -30,7 +30,7 @@ RUN mv /home/developer/.m2 /home/developer/.m2.tmpl
 RUN echo ". /home/developer/.alias" >> /home/developer/.bashrc
 
 ADD entrypoint.sh /home/developer/
-ADD m2_copy.sh /docker-entrypoint-initdb.d/
+ADD m2_copy.sh /docker-entrypoint.d/
 
 CMD ["sudo", "/home/developer/entrypoint.sh"]
 
