fixed #11 - locale in development

--- a/docker/backend-scala/Dockerfile.jdk8-2.11.5
+++ b/docker/backend-scala/Dockerfile.jdk8-2.11.5
@@ -2,8 +2,7 @@ FROM dockerfile/java:oracle-java8
 
 RUN useradd -m -s /bin/bash developer
 
-RUN apt-get update && apt-get install -y mc
-RUN apt-get install git-flow
+RUN apt-get update && apt-get install -y mc git-flow git-extras curl zsh locales && localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8 && echo "Europe/Bratislava" > /etc/timezone && dpkg-reconfigure -f noninteractive tzdata  
 
 RUN export uid=1000 gid=1000 && \
     mkdir -p /home/developer/opt && \
@@ -13,8 +12,19 @@ RUN export uid=1000 gid=1000 && \
     chmod 0440 /etc/sudoers.d/developer && \
     chown -R ${uid}:${gid}  /home/developer
 
+RUN locale-gen --no-purge en_US.UTF-8
+RUN update-locale LANG=en_US.UTF-8
+RUN dpkg-reconfigure locales
+ENV LANG en_US.UTF-8
+ENV LANGUAGE en_US:en
+ENV LC_ALL en_US.UTF-8
+
+
 USER developer
 ENV HOME /home/developer
+ENV LANG en_US.UTF-8
+ENV LANGUAGE en_US:en
+ENV LC_ALL en_US.UTF-8
 
 # Backend specific part
 
