--- a/docker/backend-java/Dockerfile.oracle-java8
+++ b/docker/backend-java/Dockerfile.oracle-java8
@@ -2,21 +2,31 @@ FROM dockerfile/java:oracle-java8
 
 RUN useradd -m -s /bin/bash developer
 
-RUN apt-get update && apt-get install -y mc
-RUN apt-get install git-flow
+RUN apt-get update && apt-get install -y mc git-flow git-extras curl zsh locales && localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8 && echo "Europe/Bratislava" > /etc/timezone && dpkg-reconfigure -f noninteractive tzdata  
 
 ADD .alias /home/developer/
 
 RUN export uid=1000 gid=1000 && \
     mkdir -p /home/developer/opt && \
-    echo "developer:x:${uid}:${gid}:Developer,,,:/home/developer:/bin/bash" >> /etc/passwd && \
+    echo "developer:x:${uid}:${gid}:Developer,,,:/home/developer:/bin/zsh" >> /etc/passwd && \
     echo "developer:x:${uid}:" >> /etc/group && \
     echo "developer ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/developer && \
     chmod 0440 /etc/sudoers.d/developer && \
     chown -R ${uid}:${gid}  /home/developer
 
+RUN locale-gen --no-purge en_US.UTF-8
+RUN update-locale LANG=en_US.UTF-8
+RUN dpkg-reconfigure locales
+ENV LANG en_US.UTF-8
+ENV LANGUAGE en_US:en
+ENV LC_ALL en_US.UTF-8
+
+
 USER developer
 ENV HOME /home/developer
+ENV LANG en_US.UTF-8
+ENV LANGUAGE en_US:en
+ENV LC_ALL en_US.UTF-8
 
 # Backend specific part
 RUN cd /home/developer/opt && wget http://tux.rainside.sk/apache/maven/maven-3/3.2.5/binaries/apache-maven-3.2.5-bin.tar.gz
