--- a/docker/backend-java/Dockerfile.oracle-java7
+++ b/docker/backend-java/Dockerfile.oracle-java7
@@ -1,8 +1,8 @@
 FROM dockerfile/java:oracle-java7
 
-RUN useradd -m -s /bin/bash developer
+RUN useradd -m -s /bin/zsh developer
 
-RUN apt-get update && apt-get install -y mc git-flow git-extras curl zsh locales && localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8 && echo "Europe/Bratislava" > /etc/timezone && dpkg-reconfigure -f noninteractive tzdata
+RUN apt-get update && apt-get install -y mc git-flow git-extras curl zsh jq locales && localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8 && echo "Europe/Bratislava" > /etc/timezone && dpkg-reconfigure -f noninteractive tzdata
 
 ADD .alias /home/developer/
 
