--- a/docker/backend-scala/Dockerfile.jdk8-2.11.5
+++ b/docker/backend-scala/Dockerfile.jdk8-2.11.5
@@ -1,12 +1,12 @@
 FROM dockerfile/java:oracle-java8
 
-RUN useradd -m -s /bin/bash developer
+RUN useradd -m -s /bin/zsh developer
 
-RUN apt-get update && apt-get install -y mc git-flow git-extras curl zsh locales && localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8 && echo "Europe/Bratislava" > /etc/timezone && dpkg-reconfigure -f noninteractive tzdata  
+RUN apt-get update && apt-get install -y mc git-flow git-extras curl zsh jq locales && localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8 && echo "Europe/Bratislava" > /etc/timezone && dpkg-reconfigure -f noninteractive tzdata  
 
 RUN export uid=1000 gid=1000 && \
     mkdir -p /home/developer/opt && \
-    echo "developer:x:${uid}:${gid}:Developer,,,:/home/developer:/bin/bash" >> /etc/passwd && \
+    echo "developer:x:${uid}:${gid}:Developer,,,:/home/developer:/bin/zsh" >> /etc/passwd && \
     echo "developer:x:${uid}:" >> /etc/group && \
     echo "developer ALL=(ALL) NOPASSWD: ALL" > /etc/sudoers.d/developer && \
     chmod 0440 /etc/sudoers.d/developer && \
