frontend javascript with node 8.9.1

--- a/docker/frontend-javascript/Dockerfile.8.9.1
+++ b/docker/frontend-javascript/Dockerfile.8.9.1
@@ -8,12 +8,10 @@ RUN \
   apt-get install -y python python-dev python-pip python-virtualenv && \
   rm -rf /var/lib/apt/lists/*
 
-RUN useradd -m -s /bin/zsh developer
-
-RUN wget -q -O - https://dl-ssl.google.com/linux/linux_signing_key.pub | sudo apt-key add - && \
-    sudo sh -c "echo deb http://dl.google.com/linux/chrome/deb/ stable main > /etc/apt/sources.list.d/google.list" && \
-    apt-get update && apt-get install -y mc git-flow git-extras curl zsh jq locales openjdk-8-jre-headless firefox google-chrome-stable && \
-    localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8 && echo "Europe/Bratislava" > /etc/timezone && dpkg-reconfigure -f noninteractive tzdata
+RUN useradd -m -s /bin/zsh developer && \
+    apt-get update && apt-get install -y mc git-flow git-extras curl zsh jq locales openjdk-8-jre-headless sudo
+# && \
+#    localedef -i en_US -c -f UTF-8 -A /usr/share/locale/locale.alias en_US.UTF-8 && echo "Europe/Bratislava" > /etc/timezone && dpkg-reconfigure -f noninteractive tzdata
 
 #ADD .alias /home/developer/
 COPY home-init.d  /home/developer/
@@ -27,9 +25,9 @@ RUN export uid=1000 gid=1000 && \
     chmod 0440 /etc/sudoers.d/developer && \
     chown ${uid}:${gid} -R /home/developer
 
-RUN locale-gen --no-purge en_US.UTF-8
-RUN update-locale LANG=en_US.UTF-8
-RUN dpkg-reconfigure locales
+#RUN locale-gen --no-purge en_US.UTF-8
+#RUN update-locale LANG=en_US.UTF-8
+#RUN dpkg-reconfigure locales
 ENV LANG en_US.UTF-8
 ENV LANGUAGE en_US:en
 ENV LC_ALL en_US.UTF-8
