--- a/docker/frontend-javascript/Dockerfile.8.14.0
+++ b/docker/frontend-javascript/Dockerfile.8.14.0
@@ -1,4 +1,4 @@
-FROM ubuntu:16.04
+FROM ubuntu:18.04
 
 RUN \
   apt-get update && \
@@ -6,6 +6,7 @@ RUN \
   apt-get install -y software-properties-common && \
   apt-get install -y byobu curl git htop man unzip vim wget && \
   apt-get install -y python python-dev python-pip python-virtualenv && \
+  apt-get install -y python3.7 python3-pip python3.7-venv && \
   rm -rf /var/lib/apt/lists/*
 
 RUN useradd -m -s /bin/zsh developer && \
