add Python 3.7 to frontend-javascript 10.16.3

--- a/docker/frontend-javascript/Dockerfile.10.16.3
+++ b/docker/frontend-javascript/Dockerfile.10.16.3
@@ -6,8 +6,11 @@ RUN \
   apt-get install -y build-essential \
                      curl git htop man unzip vim wget \
                      python python-dev python-pip python-virtualenv \
+                     python3.7 python3-pip python3.7-venv \
                      mc git-flow git-extras curl zsh fish jq locales openjdk-8-jre-headless sudo && \
   rm -rf /var/lib/apt/lists/*
+
+RUN python3.7 -m pip install pip
 
 RUN useradd -m -s /bin/bash developer
 
